Update grid + game over + favicon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link>
   </head>
   <body>
-    <h1>Morpion</h1>
+    <h1>Jouons au morpion !</h1>
     <div id="board">
       <div data-index="1" class="tile right-border bottom-border"></div>
       <div data-index="2" class="tile right-border bottom-border"></div>
