--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jeu du morpion</title>
+    <title>Tic-tac-toe</title>
     <link href="index.css" rel="stylesheet" />
-    <link href="assets/morpion.png" rel="icon">
+    <link href="assets/Tic-tac-toe.png" rel="icon">
     <link>
   </head>
   <body>
-    <h1>Jouons au morpion !</h1>
+    <h1>Jouons au Tic-tac-toe !</h1>
     <div id="board">
       <div data-index="1" class="tile right-border bottom-border"></div>
       <div data-index="2" class="tile right-border bottom-border"></div>
